# HW_WEB_modul_9

HW_9/: pyproject.toml
HW_9/beautiful_soup/: authors.json  main.py
HW_9/scrapy_borsch/: authors.json  main.py
HW_9/scripts_ from_HW_8/: config.ini  connect.py  models.py  seed.py  test.py
