[tool.poetry]
name = "hw-9"
version = "0.1.0"
description = ""
authors = ["Maksym <150614204+MaksElkapalka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
lxml = "^5.2.1"
scrapy = "^2.11.1"
mongoengine = "^0.28.2"
redis = "^5.0.4"
redis-lru = "^0.1.2"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
